Complete the java-25 track: add real content to its final 5 practice lessons
Twenty-second through twenty-sixth of the 26 "Practice" lessons filled
in (see work.md) — this finishes every practice lesson across both the
java-21 and java-25 courses. All 5 delegated to parallel sub-agents,
each scoped to write only its own content file and set its own
module's contentPath:

- Flow Control: dangling-else resolution in a brace-less if, do-while's
  guaranteed-at-least-once execution, yield + fall-through in a
  colon-syntax switch expression, record deconstruction patterns with
  sealed-type exhaustiveness, unlabeled vs. labeled break through a
  switch nested in a loop.
- Packaging: automatic-module name derivation from a JAR filename, the
  one-way readability between named and unnamed modules, telling a
  modular JAR apart from a plain one treated as an automatic module,
  jlink requiring an explicit --module-path, a service provider needing
  to be an explicit root module to actually be discovered.
- Values: text block incidental-whitespace stripping (JEP 378),
  Integer/Long wrapper caching making == "work" by accident,
  Instant.until() truncation plus Duration-on-a-LocalDate throwing
  UnsupportedTemporalTypeException, a DST fall-back overlap producing
  the same LocalDateTime but a different Instant, compound-assignment
  narrowing combined with ternary promotion.
- I/O: Files.writeString()'s explicit options replacing rather than
  merging with its defaults, the Files.exists()/notExists() asymmetry,
  static fields never round-tripping through serialization,
  relativize() throwing on mismatched absolute/relative path "kinds",
  normalize() retaining an unresolvable leading ".." on a relative
  path.
- Localization: Locale.of() case normalization plus toString() vs.
  toLanguageTag(), MessageFormat quote-escaping combined with
  ChoiceFormat boundary semantics, locale-aware DecimalFormatSymbols,
  ofPattern(pattern, locale) localizing only token text rather than